test/expected/explain_uc16.out
explain unsigned char16_t x
                 ^
18: error: "unsigned char16_t" is illegal for built-in type
